Update on Overleaf.

--- a/review.tex
+++ b/review.tex
@@ -29,7 +29,7 @@
 
 
 \begin{abstract}
-The notion of morphogenesis seems to play an important role in the study of a broad range of complex systems. If the concept was introduced in embryology to design growth of organisms, it was rapidly used in various fields, e.g. urbanism, geomorphology, psychology. However, the use of the concept seems generally fuzzy and to have a field-specific definition for each use. We propose in this paper an epistemological study, starting with a broad interdisciplinary review and extracting essential notions linked to morphogenesis across fields. The aim is to build a consistent general meta-framework for morphogenesis, and to study the particular deviations from it. Further work may include concrete application of the framework on particular cases to operate interdisciplinary transfers of concepts, and quantitative text analysis to strengthen qualitative results.
+The notion of morphogenesis seems to play an important role in the study of a broad range of complex systems. If the concept was introduced in embryology to design growth of organisms, it was rapidly used in various fields, e.g. urbanism, geomorphology and even psychology. However, the use of the concept seems generally fuzzy and to have a field-specific definition for each use. We propose in this paper an epistemological study, starting with a broad interdisciplinary review and extracting essential notions linked to morphogenesis across fields. The aim is to build a consistent general meta-framework for morphogenesis, and to study the particular deviations from it. Further work may include concrete application of the framework on particular cases to operate interdisciplinary transfers of concepts, and quantitative text analysis to strengthen qualitative results.
 \end{abstract}
 
 
@@ -48,7 +48,7 @@ The notion of morphogenesis seems to play an important role in the study of a br
 %%%%%%%%%%%%%%%%%%%%%%%
 \section*{Introduction}
 
-At every historical period, people use the main technological advance as a metaphor to explain other phenomenon in nature. First, nature was mechanical, and then electrical and now computational. Here we suggest that taking an alternative metaphor might allow us to better study some properties of a system, and study how the concept of morphogenesis that originated in the study of developmental biology, can be used across systems. Morphogenesis is a very powerful metaphor that is distinct from the previous three that have been very popular in history. Unlike the mechanical, electrical or computational explanations of nature, morphogenesis is not a human designed process. Morphogenesis emphasize the role of change and growth, rather than a static state. "... natural history deals with ephemeral and accidental, not eternal nor universal things ..." \cite{thompson1942growth} The goal of this paper is to study 1. the definition of the word morphogenesis in different fields. 2. fields that use similar approaches and concepts that embodies the notion of morphogenesis but does not use the word morphogenesis. 3. if approaches to study morphogenesis can be applied across different fields. A similar effort is described in \cite{bourgine2010morphogenesis}, but it consists more on a collection of viewpoints from subjects that can be related to morphogenesis rather than an epistemological reconstruction of the notion as we attend to do. Furthermore, examples are far from exhausted and our review is thus complementary.
+At every historical period, people use the main technological advance as a metaphor to explain other phenomenon in nature. First, nature was mechanical, then electrical, and now, computational. Here we suggest that taking an alternative metaphor might allow us to better study some properties of a system, and study how the concept of morphogenesis that originated in the study of developmental biology, can be used across systems. Morphogenesis is a very powerful metaphor that is distinct from the previous three that have been very popular in history. Unlike the mechanical, electrical or computational explanations of nature, morphogenesis is not a human designed process. Morphogenesis emphasize the role of change and growth, rather than a static state. "... natural history deals with ephemeral and accidental, not eternal nor universal things ..." \cite{thompson1942growth} The goal of this paper is to study 1. the definition of the word morphogenesis in different fields. 2. fields that use similar approaches and concepts that embodies the notion of morphogenesis but does not use the word morphogenesis. 3. if approaches to study morphogenesis can be applied across different fields. A similar effort is described in \cite{bourgine2010morphogenesis}, but it consists more on a collection of viewpoints from subjects that can be related to morphogenesis rather than an epistemological reconstruction of the notion as we attend (intend??) to do. Furthermore, examples are far from exhausted and our review is thus complementary.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -56,7 +56,7 @@ At every historical period, people use the main technological advance as a metap
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
-\subsection*{Development Biology}
+\subsection*{Developmental Biology}
 \begin{itemize}
 \item{Reaction Diffusion} 
 
@@ -73,6 +73,8 @@ Segmentation usually involves a more complex system than the two previously disc
 Evolution has also produced reaction-diffusion processes that 
 \end{itemize}
 % Lars : C Elegans : more a concept. models of force transmission. how the form comes from the molecular perspective ; but only physics model.
+% Lars: In C. elegans emergence of shape from molecular characteristics can be divided into several steps. First, in the one cell stage, there is only minimal asymmetry in the developing embryo: it is symmetric apart from the region where the sperm has entered the oocyte, which is where symmetry will broken 'properly'. This process of symmetry breaking During early development symmetry is first broken when the sperm enters the oocyte. Prior to fertilisation, any part of the oocyte could later become head or tail. After sperm entry however, the future anterior-posterior (front-rear) axis has been determined. 
+%position of sperm entry is somewhat random, also not large-scale, needs robust amplification to allow reproducible development. achieved via mechano-chemical coupling (see previous section on reaction diffusion). This achieves full specification of the future head and tail by the two cell stage. breaking of left-right symmetry. D-V axis specified between 2 and 4 cell stage (EMS defines ventral), LR between four and six cell stage. This is mostly done by geometric constraints (??) and biochemical signalling, forces play a crucial role later on (and in one cell stage for symmetry breaking). A precisely regulated network gives rise to a completely determined cell lineage, reproducing animals with a near identical layout.
 %  others : qualitative description. no network stuff. rq : not necessary to have networks.
 %  fundamental idea. how does the shape control the function.
 % Celegans totally precisely determined.
@@ -159,14 +161,15 @@ The Urban growth modeling literature often refer to the growth process as morpho
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\subsection*{Psychology}
+\subsection*{Social Sciences and Psychology}
 
-Morphogenesis has been sparsely used as a useful metaphor to understand different processes in various psychological fields. For example, in Developmental Psychology one can think of the relation to evolution of human cultural behavior and learning, epigenetic neural systems, and their influence on neural development and behavior throughout life , and in Clinical psychology and psychopathology we have analogies in the emergent of psychical structures and the self-organization of forms of relation with the self and the other, and of course in Neuroscience we have a plethora of morphogenetic phenomena related to  the structure of the neural nets and “hardware” of the brain.
+Morphogenesis has been sparsely used as a useful metaphor to understand different processes in Social Sciences and various psychological fields. For example, in Developmental Psychology one can think of the relation to evolution of human cultural behavior and learning, epigenetic neural systems, and their influence on neural development and behavior throughout life , and in Clinical psychology and psychopathology we have analogies in the emergent of psychical structures and the self-organization of forms of relation with the self and the other, and of course in Neuroscience we have a plethora of morphogenetic phenomena related to  the structure of the neural nets and “hardware” of the brain.
 
 In social psychology we have remarkable examples like the morphogenetic approach proposed by Margaret Archer applied to the problem of structure and agency, in other words, how we both shape society and are shaped by it in a dynamic interplay. Thus the morphogenetic approach offers a new understanding of social change and of the subject within it.  
 
-Nonetheless, more than a systematic consensus in it’s usage, there is a common perception of it’s explanatory power to grasp notions that show remarkable morphogenetic concordance. 
-We will focus it’s usage in the field of Psychoanalysis, where it has been evoked as early as 1918 to understand the formation of psychical structures and their dynamics, the pervasive repetition of early development, and the self organization in the symptom. After an extensive review on the available bibliography contained in the database Psychoanalytic Electronic Publishing we can argue that we can argue that it has been most widely used after the sixties in relation to the morphogenetic qualities of the structuration of the drive theory (for example the article Instinct Theory in the Light of Microbiology, Therese Benedek, M.D.), and moreover thanks to the ideas of René Thom on Structural Stability and Morphogenesis.
+Nonetheless, more than a systematic consensus in it’s usage, there is a common perception of it’s explanatory power to grasp notions that show remarkable morphogenetic concordance.
+
+For example, it’s usage in the field of Psychoanalysis has been evoked as early as 1918 to understand the formation of psychical structures and their dynamics, the pervasive repetition of early development, and the self organization in the symptom. After an extensive review on the available bibliography contained in the database Psychoanalytic Electronic Publishing we can argue that it has been most widely used after the sixties in relation to the morphogenetic qualities of the structuration of the drive theory (for example the article Instinct Theory in the Light of Microbiology, Therese Benedek, M.D.), and moreover thanks to the ideas of René Thom on Structural Stability and Morphogenesis.
 
 
 
