--- a/review.tex
+++ b/review.tex
@@ -301,13 +301,28 @@ An ontological specification~\cite{livet2010ontology} yields an application to a
 %%%%%%%%%%%%%%%%%%%%%%%
 \section*{Discussion}
 
-\subsection*{Perspectives}
+%%%%%%%%%%%%%%%%%%%%%%%
+\subsection*{Further Developments}
 
-\begin{itemize}
-\item Systematize the framework : iterative construction ; systematic comparisons
-\item Apply to a particular subject/model
+\paragraph{Towards a more systematic construction}
+
+% \item Systematize the framework : iterative construction ; systematic comparisons
+
+Our work relies for now on a broad but not \emph{systematic} review, in the sense
+
+
 \item Algorithmic Literature Review and Text-mining : quantitative epistemology
 \end{itemize}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%
+\subsection*{Potential Applications}
+
+
+\paragraph{Transfer of Knowledge between fields}
+
+% \item Apply to a particular subject/model
 
 
 
