Update on Overleaf.

--- a/review.tex
+++ b/review.tex
@@ -56,9 +56,23 @@ At every historical period, people use the main technological advance as a metap
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
+%How to set up dev bio part in morpho paper?
+%General aims: How is morphogenetics defined in dev bio, how does this fit the bigger picture?
+%What methods are applied?
+%Examples?
+%Can we identify areas in which morphogenesis is not used (e.g. only chemistry is looked at, forces ignored, etc?)?
+%
+%Be more broad about general aspects of morphogenesis in biology, then narrow down to some specifics we know a lot about 
+%
+%Organoids: we can reproduce a great deal of morphogenesis, but still don't understand everything, Sato&Clevers
 \subsection*{Developmental Biology}
+\subsubsection{Notion of morphogenesis in biology}
+%Some founders of the field: D'Arcy Thompson (On Growth and Form, 1917) Turing (1952)
+%Special issue in Science: http://www.sciencemag.org/site/special/morph/index.xhtml
+% First in depth application of this theory to biology by Gierer&Meinhardt Kybernetik (1972),
+
 \begin{itemize}
-\item{Reaction Diffusion} 
+\item{Reaction-Diffusion mechanisms} 
 
 General idea: how is information transduced, how does this information then become translated into forces in order to create shape/function changes of the developing organism?
 
@@ -72,16 +86,13 @@ Segmentation usually involves a more complex system than the two previously disc
 
 Evolution has also produced reaction-diffusion processes that 
 \end{itemize}
-% Lars : C Elegans : more a concept. models of force transmission. how the form comes from the molecular perspective ; but only physics model.
+% Lars : C Elegans : models of force transmission. how the form comes from the molecular perspective ; but only physics model.
 % Lars: In C. elegans emergence of shape from molecular characteristics can be divided into several steps. First, in the one cell stage, there is only minimal asymmetry in the developing embryo: it is symmetric apart from the region where the sperm has entered the oocyte, which is where symmetry will broken 'properly'. This process of symmetry breaking During early development symmetry is first broken when the sperm enters the oocyte. Prior to fertilisation, any part of the oocyte could later become head or tail. After sperm entry however, the future anterior-posterior (front-rear) axis has been determined. 
 %position of sperm entry is somewhat random, also not large-scale, needs robust amplification to allow reproducible development. achieved via mechano-chemical coupling (see previous section on reaction diffusion). This achieves full specification of the future head and tail by the two cell stage. breaking of left-right symmetry. D-V axis specified between 2 and 4 cell stage (EMS defines ventral), LR between four and six cell stage. This is mostly done by geometric constraints (??) and biochemical signalling, forces play a crucial role later on (and in one cell stage for symmetry breaking). A precisely regulated network gives rise to a completely determined cell lineage, reproducing animals with a near identical layout.
 %  others : qualitative description. no network stuff. rq : not necessary to have networks.
 %  fundamental idea. how does the shape control the function.
 % Celegans totally precisely determined.
 
-% First in depth application of this theory to biology by Gierer&Meinhardt Kybernetik (1972),
-
-%field founded by Turing (1952)
 
 
 % compare the two biological approach ?
@@ -114,6 +125,8 @@ The patterns of an ant nest are the result of ``the morphogenesis of an extended
 \paragraph{other}
 
 % (Juste) I saw this paper the other day, dealing with identification of signalling processes for the morphogenesis of the heart (if I understand well, they identify proteines driving the process) -> the notion is applied to an organ only, maybe it is an interesting example to show the different scopes.
+
+% (Lars) Cool paper! As you noted, they mainly talk about the biochemical signaling involved, not about how the actual shape of the tissue comes about. We should figure out whether this shape thing has been studied previously. This would be another nice example of how forces/geometric constraints and signaling determine size and shape and function of a body unit.
 \cite{han2016coordinating}
 
 
